<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jinadiwathsala.mytabapplication.MainActivity">

    <item
        android:id="@+id/menusearch"
        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/action_newGroup"
        android:orderInCategory="100"
        android:title="@string/action_new_Group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_New_broadcast"
        android:orderInCategory="100"
        android:title="@string/action_New_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_WhatsApp_Web"
        android:orderInCategory="100"
        android:title="@string/action_WhatsApp_Web"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Starred_messages"
        android:orderInCategory="100"
        android:title="@string/action_Starred_messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_New_Settings"
        android:orderInCategory="100"
        android:title="@string/action_New_Settings"
        app:showAsAction="never" />


</menu>
